name:                letters
version:             0.1.0.0
synopsis:            Typography using freetype and harfbuzz
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Letters.Internal
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.9 && <5.0,
    vector,
    linear,
    hashable,
    primitive
  hs-source-dirs:      src
  default-language:    Haskell2010

  c-sources: cbits/letters.c
  include-dirs:
    cbits
    /usr/local/opt/freetype/include/freetype2
    /usr/local/Cellar/harfbuzz/1.3.3_1/include/harfbuzz
  extra-lib-dirs:
    /usr/local/opt/freetype/lib
    /usr/local/Cellar/harfbuzz/1.3.3_1/lib

  includes: letters.h

  extra-libraries:
    freetype
    harfbuzz

  ghc-options:      -Wall

  -- pkgconfig-depends:
    -- freetype2

